# Bamboard

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.claude/hooks/: session-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml  sim.yml  tests.yml
case/: LICENSE  README.md  bamboard.scad  case.stl  cover.stl  stand.stl
docs/: assembly.md  configuration.md  flashing.md
docs/screenshots/: README.md
firmware/: platformio.ini
firmware/include/: User_Setup.h  lv_conf.h
firmware/scripts/: gen_ca_bundle.sh
firmware/src/: config.h  main.cpp  secrets.example.h
firmware/src/hw/: buttons.cpp  buttons.h  display.cpp  display.h  led.cpp  led.h
firmware/src/net/: bambuddy_client.cpp  bambuddy_client.h  bambuddy_ws.cpp  bambuddy_ws.h  ca_bundle.h  github_ota.cpp  github_ota.h  host_valid.cpp  host_valid.h  ota_verify.cpp  ota_verify.h  psram_json.h  semver.cpp  semver.h
firmware/src/ui/: control.h  dry_default.cpp  dry_default.h  fonts.h  i18n.cpp  i18n.h  screens.cpp  screens.h  ui.cpp  ui.h  units.h
firmware/src/ui/fonts/: bb_font_12.c  bb_font_14.c  bb_font_16.c  bb_font_20.c  bb_font_28.c  bb_font_36.c
firmware/src/ui/screens/: ams.cpp  dashboard.cpp  header.cpp  history.cpp  overlays.cpp  printers.cpp  queue.cpp  settings.cpp  tab_bar.cpp  theme.cpp  theme.h
hardware/: bom.md  wiring.md
scripts/: README.md  _common.py  compose_hero.sh  flash-linux.sh  flash-mac.command  flash-windows.bat  flash.py  ota.py  update-linux.sh  update-mac.command  update-windows.bat  validate_i18n.py
sim/: CMakeLists.txt  README.md  lv_conf.h  main.cpp  png.h
sim/shim/: Arduino.h  HTTPClient.h  Stream.h  TJpg_Decoder.h  WebSocketsClient.h  WiFi.h  WiFiClient.h  WiFiClientSecure.h  esp_heap_caps.h  shims.cpp
sim/shim/freertos/: FreeRTOS.h  semphr.h
sim/stubs/: Arduino.h  ArduinoStubs.cpp  WebSocketsClient.h  WiFi.h  bambuddy_live.cpp  bambuddy_stubs.cpp  display_stub.cpp
sim/stubs/freertos/: FreeRTOS.h  semphr.h
tests/: CMakeLists.txt  host_net_shim.cpp  test_logic.cpp
tests/fixtures_baseline/: README.md
web/: README.md  app.js  i18n.js  index.html  manifest.json  styles.css
